# team17

./: .gitignore  .gitmodules  README.md  audio_transcription.py  index.html  notes.txt  package.json  pyproject.toml  temp.py  temp_762ede34-2d4e-4c79-8e89-e504867857e2.m4a.part
.avante_chat_history/: src__team17__data__preprocessing.py.json  src__team17__trainer__train.py.json
backend/: run_fish_api.bash  run_ultravox_api.bash
backend/llm/: requirements.txt  run_ultravox_api.py
backend/llm/ultravox/: command.sh
backend/tts/: call.sh  clone_voice.sh  run.sh
backend/tts2/: create_emb.bash
backend/tts3/: api.py  requirements.txt
backend/tts3/voices/: caption.txt
backend/tts3/voices_men/: caption.txt
configs/: preprocess.py  scrape.py  train.py
data/: urls.txt
data/processed/86/: 86d2a0fa-4ef8-7b3c-f69a-85def127a12e_0.npz  86d2a0fa-4ef8-7b3c-f69a-85def127a12e_1.npz
data/processed/c8/: c855a6ba-2af3-fa9f-cd1f-9ffcd745b0b2_26.npz
data/processed/cb/: cbbe4602-ceeb-c220-1277-ab6de02e3f80_32.npz
data/processed/d4/: d468cf49-fb1c-bd8a-4352-3f5e040d39e9_27.npz
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/dev-dist/: sw.js
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx  styles.css
frontend/src/components/: AnimatedBlob.tsx  AnimatedText.tsx  ChatHistory.tsx  (+9 more)
scripts/: index.py
server/: run_ultravox_api.py  test.py
src/: App.tsx
src/components/: ProtectedRoute.tsx
src/team17/: __init__.py  utils.py  whisper_encoder.py
src/utils/: openai.ts
test/: notebook.ipynb
(+58 files in other folders)
