[project]
name = "team17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "elyx", email = "elio@pascarelli.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
team17 = "team17:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
